[package]
name = "common"
version = "0.1.0"
authors = ["Rom's <romain.kelifa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7.2.0"
openssl = "0.10.33"
prost = "0.6.1"
prost-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shrinkwraprs = "0.3.0"
tonic = { version = "0.3.1", features = ["tls"] }

[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]