[package]
name = "std-sample"
version = "0.1.0"
authors = ["Rom's <romain.kelifa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
common = { path = "../common" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = "0.14"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["macros"] }
tonic = { version = "0.3.1", features = ["tls"] }
tower = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]